config("fmt_config") {
  include_dirs = [ "include" ]
}

static_library("fmt") {
  sources = [
    "include/fmt/core.h",
    "include/fmt/format.h",
    "include/fmt/locale.h",
    "include/fmt/ostream.h",
    "include/fmt/printf.h",
    "include/fmt/time.h",
    "include/fmt/format.cc",
  ]
  public_configs = [ ":fmt_config" ]
}
